# TaskIngenium

./: LICENSE  README.md  create.py  pyproject.toml  requirements.txt  run.py
TaskApp/: __init__.py  fig.py  forms.py  models.py
TaskApp/errors/: __init__.py  handlers.py
TaskApp/main/: routes.py
TaskApp/static/css/: main.css
TaskApp/static/js/: main.js
TaskApp/tasks/: __init__.py  forms.py  routes.py  utils.py
TaskApp/templates/: account.html  create_task.html  home.html  layout.html  login.html  reset_request.html  reset_token.html  signup.html  task.html  tasks.html
TaskApp/templates/errors/: 403.html  404.html  500.html
TaskApp/users/: __init__.py  forms.py  routes.py  utils.py
instance/: Task.db
