[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TASKINGENIUM"
version = "0.0.1"
authors = [
  { name="Ezeana Michael", email="michael.c.ezeana@gmail.com" },
]
description = "TASKINGENIUM"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Just-Mike4/TaskIngenium.git"
"Bug Tracker" = "https://github.com/Just-Mike4/TaskIngenium.git/TaskApp/templates/errors"
